# stick-game

./: CMakeLists.txt  Game.cpp  GameType.h  NormalModeMove.cpp  NormalModeStrategy.cpp  NormalModeStrategy.h  PlayWindow.cpp  PlayWindow.h  README.md  RowGraphStrategy.cpp  RowGraphStrategy.h  RowGrundyStrategy.cpp  RowGrundyStrategy.h  StandardMove.h  StandardStrategy.h  bot.cpp  gamewindow.cpp  gamewindow.h  gamewindow.ui  human.cpp  iBotStrategy.h  iCheckMove.h  iPlayer.cpp  main.cpp
include/: Game.h  NormalModeMove.h  NormalModeStrategy.h  RowGraphStrategy.h  RowGrundyStrategy.h  RowMove.h  RowStrategy.h  StandardMove.h  StandardStrategy.h  bot.h  human.h  iBotStrategy.h  iCheckMove.h  iPlayer.h  iState.h  iStrategy.h  solve.h
src/: Game.cpp  NormalModeMove.cpp  RowGraphStrategy.cpp  RowGrundyStrategy.cpp  RowMove.cpp  RowStrategy.cpp  StandardMove.cpp  StandardStrategy.cpp  bot.cpp  human.cpp  iBotStrategy.cpp  iPlayer.cpp  iState.cpp  main.cpp  solve.cpp
